--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/EngZena/fruits-store-backend/issues"
   },
-  "homepage": "https://github.com/EngZena/fruits-store-backend#readme"
+  "homepage": "https://github.com/EngZena/fruits-store-backend#readme",
+  "dependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
