--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/EngZena/fruits-store-backend#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
