--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.1.0",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
