--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.1.0",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
