--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.1.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
