--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/EngZena/fruits-store-backend#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.1.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
