--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
+    "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "xss-clean": "^0.1.1"
