--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
