--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
