--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "fruits-store-backend",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "8.3.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
