--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.1.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "handlebars": "^4.7.7",
     "helmet": "^7.0.0",
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.0",
