install @babel/core and @babel/preset-env

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
     "eslint": "^8.41.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
