--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,20 @@
 {
-  "extends": ["airbnb", "prettier", "plugin:node/recommended"],
-  "plugins": ["prettier"],
+  "extends": [
+    "airbnb",
+    "prettier",
+    "plugin:node/recommended"
+  ],
+  "plugins": [
+    "prettier",
+    "node"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module"
+  },
   "rules": {
     "prettier/prettier": "error",
+    "node/no-unsupported-features/es-syntax": "off",
     "spaced-comment": "off",
     "no-console": "warn",
     "consistent-return": "off",
