--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "homepage": "https://github.com/EngZena/fruits-store-backend#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "config": "^3.3.9",
     "cors": "^2.8.5",
-    "dotenv": "^16.1.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "handlebars": "^4.7.7",
